# rorando

./: .gitignore  CMakeLists.txt  README.md  synth.c
projects/: CMakeLists.txt
projects/synth/: CMakeLists.txt  synth.c
s/: CMakeLists.txt  master.c
